# flower-store-backend

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  startup.py
app/api/v1/: api.py  deps.py
app/api/v1/endpoints/: auth.py  dbinfo.py  health.py  messages.py  orders.py  products.py  support.py  users.py
app/core/: config.py  constants.py  exceptions.py  logging.py  middleware.py  security.py  settings.py
app/db/: base.py  base_class.py  rls.py  session.py
app/db/models/: __init__.py  audit_log.py  customer.py  message.py  order.py  product.py  support_staff.py  user.py
app/schemas/: auth.py  message.py  order.py  product.py  user.py
app/services/: auth_service.py  email_service.py  encryption_service.py  message_service.py  order_service.py  product_service.py  rls_service.py  user_service.py
app/utils/: crypto.py  helpers.py  time.py  validators.py
scripts/: deploy.sh  health_check.sh
